address-book-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: address-book-api
    app.kubernetes.io/component: address-book-api
    app.kubernetes.io/instance: address-book-api
  name: address-book-api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: address-book-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      labels:
        deployment: address-book-api
        app: address-book-api
    spec:
      containers:
      - env:
        - name: SERVICE_HOST
          value: address-book-api-migrator-poc.apps.rpm.okd.h2o-4-1050.h2o.vmware.com 
        - name: DB_USERNAME
          value: migrator
        - name: DB_PASSWORD
          value: migrator
        - name: DB_HOST
          value: mysql-svc
        - name: DB_HOST_PORT
          value: "3306"
        - name: DB_NAME
          value: migratordb
        image: quay.io/oluotes0/address-book:v5
        imagePullPolicy: IfNotPresent
        name: address-book-api
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
