address-book-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: address-book-api
    app.kubernetes.io/component: address-book-api
    app.kubernetes.io/instance: address-book-api
  name: address-book-api
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: address-book-api
  sessionAffinity: None
  type: ClusterIP
